--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div id="slider-1" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
-        <ol class="carousel-indicators">
+        <ol class="carousel-indicators hidden-xs">
             <li data-target="#slider-1" data-slide-to="0" class="active"></li>
             <li data-target="#slider-1" data-slide-to="1"></li>
             <li data-target="#slider-1" data-slide-to="2"></li>
@@ -85,41 +85,41 @@
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img class="img-responsive" src="images/01.jpg" alt="pic 1">
-                <div class="carousel-caption hidden-xs">
+                <div class="carousel-caption">
                     <h1>Programming</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet, pro equidem imperdiet ad. Eum labore maluisset mnesarchum an, id erat splendide per, no mei phaedrum iracundia. Est sale propriae consetetur te, posse convenire nec. </p>
+                    <p class="lead hidden-xs">Lorem ipsum dolor sit amet, pro equidem imperdiet ad. Eum labore maluisset mnesarchum an, id erat splendide per, no mei phaedrum iracundia. Est sale propriae consetetur te, posse convenire nec. </p>
                 </div>
             </div>
-            <div class="item">
+            <div class="item ">
                 <img class="img-responsive" src="images/02.jpg" alt="pic 2">
-                <div class="carousel-caption hidden-xs">
+                <div class="carousel-caption">
                     <h1>Web Design</h1>
-                    <p class="lead">ATollit diceret eos no, meis delenit no eam. Vim meis intellegebat no, justo idque postulant cum in. Adhuc dicam sit cu, ei rebum officiis deseruisse sea. Vix et sumo lobortis. </p>
+                    <p class="lead hidden-xs">ATollit diceret eos no, meis delenit no eam. Vim meis intellegebat no, justo idque postulant cum in. Adhuc dicam sit cu, ei rebum officiis deseruisse sea. Vix et sumo lobortis. </p>
                 </div>
             </div>
             <div class="item">
                 <img class="img-responsive" src="images/03.jpg" alt="pic 1">
-                <div class="carousel-caption hidden-xs">
+                <div class="carousel-caption">
                     <h1>Mobile App</h1>
-                    <p class="lead">At brute argumentum eum, cu verterem cotidieque vis, his id eripuit inermis persecuti. Et virtute ancillae aliquando nec, vis id dictas euismod, et lorem saepe ignota sit. Pri ne menandri. </p>
+                    <p class="lead hidden-xs">At brute argumentum eum, cu verterem cotidieque vis, his id eripuit inermis persecuti. Et virtute ancillae aliquando nec, vis id dictas euismod, et lorem saepe ignota sit. Pri ne menandri. </p>
                 </div>
             </div>
 
             <div class="item">
                 <img class="img-responsive" src="images/04.jpg" alt="pic 1">
-                <div class="carousel-caption hidden-xs">
+                <div class="carousel-caption">
                     <h1>Hosting</h1>
-                    <p class="lead">Ea eam utamur viderer sadipscing. Vocent offendit quaerendum sed ut, per eu erat reque oratio. Solum fabulas quo ut, erant maiorum eu nam. Per maiorum docendi explicari ad. Inermis recusabo. </p>
+                    <p class="lead hidden-xs">Ea eam utamur viderer sadipscing. Vocent offendit quaerendum sed ut, per eu erat reque oratio. Solum fabulas quo ut, erant maiorum eu nam. Per maiorum docendi explicari ad. Inermis recusabo. </p>
                 </div>
             </div>
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control" href="#slider-1" role="button" data-slide="prev">
+        <a class="left carousel-control hidden-xs" href="#slider-1" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#slider-1" role="button" data-slide="next">
+        <a class="right carousel-control hidden-xs" href="#slider-1" role="button" data-slide="next">
             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -194,11 +194,11 @@
                             <h4>Adam Mohamed</h4>
                         </div>
                         <div class="item text-center">
-                            <p class="lead">Ex eum fabellas explicari, suas adhuc praesent id ius. Ne sea dignissim voluptatibus, vix paulo perfecto te. Tantas consequuntur eu cum. Ad pri blandit quaestio assueverit, et qui tale dicat.</p>
+                            <p class="lead">Ex eum fabellas explicari, suas adhuc praesent id ius. Ne sea dignissim voluptatibus, vix paulo perfecto te. Tantas consequuntur eu cum. Ad pri blandit quaestio assueverit.</p>
                             <h4>Hany Khaled</h4>
                         </div>
                         <div class="item text-center">
-                            <p class="lead">Debet meliore ei vis, primis everti vim ne, his cu nonumes deserunt. Ea forensibus mediocritatem eam. Ei quo mundi utroque luptatum, alii tempor populo no ius. Has at possim veritus.</p>
+                            <p class="lead">Debet meliore ei vis, primis everti vim ne, his cu nonumes deserunt. Ea forensibus mediocritatem eam. Ei quo mundi utroque luptatum, alii tempor populo no ius. Has at possim.</p>
                             <h4>Zahra Sabry</h4>
                         </div>
                     </div>
