--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <!--    compatibility with IE    -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Course</title>
+    <title>BootCode</title>
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="chortcut icon" href="images/icon_cloud.gif">
     <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -353,6 +354,21 @@
     </section>
 
     <!-- End Our Team Section -->
+
+    <!--  Start Subscription Section-->
+
+    <section class="subscribe text-center">
+        <div class="container">
+            <h1>Keep In Touch</h1>
+            <p class=" lead">SignUp For Newsletter, Dont Warry About Spam, We Heat It Too.</p>
+            <form class="form-inline">
+                <input class="form-control input-lg" type="text" placeholder="Type Your Email">
+                <botton class="btn btn-success btn-lg"><i class="fa fa-edit fa-lg"></i>Subscribe</botton>
+            </form>
+        </div>
+    </section>
+
+    <!--  Start Subscription Section-->
 
 
     <!--  JS Files  -->
