change team pic

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                 <div class="row">
                     <div class="col-md-3 col col-sm-6">
                         <div class="person">
-                            <img class="img-circle" src="images/person_5.jpg">
-                            <h4>Ahmed Mostafa</h4>
+                            <img class="img-circle" src="images/person_6.jpg">
+                            <h4>AbdoAllah Akram</h4>
                             <p>Lorem ipsum dolor sit amet, quod verterem maiestatis eu vix.</p>
                             <i class="fa fa-google-plus fa-lg"></i>
                             <i class="fa fa-facebook fa-lg"></i>
@@ -315,7 +315,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-5">
                         <div class="person">
                             <img class="img-circle" src="images/person_7.jpg">
                             <h4>Nour Saad</h4>
@@ -329,7 +329,7 @@
 
                     <div class="col-md-3 col-sm-6">
                         <div class="person">
-                            <img class="img-circle" src="images/person_6.jpg">
+                            <img class="img-circle" src="images/person_5.jpg">
                             <h4>Saeed Khayrey</h4>
                             <p>Quot aliquam praesent ad duo, eu per hinc semper integre, principes.</p>
                             <i class="fa fa-google-plus fa-lg"></i>
@@ -622,7 +622,7 @@
 
                 <div class="col-md-4">
                     <h3>Our Work</h3>
-                        <div class="our-work">
+                    <div class="our-work">
                             <img class="img-thumbnail img-responsive" src="images/work/3-room-flat-interior-design_Livingroom-150x150.jpg">
                             <img class="img-thumbnail img-responsive" src="images/work/AB-Flat-by-Dom-Arquitectura-03.jpg">
                             <img class="img-thumbnail img-responsive" src="images/work/Flat_B-View-02.jpg">
