--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
     <!-- Start Slider Section -->
 
-    <div id="slider-1" class="carousel slide" data-ride="carousel">
+    <div id="slider-1" class="carousel slide hidden-xs" data-ride="carousel">
         <!-- Indicators -->
-        <ol class="carousel-indicators hidden-xs">
+        <ol class="carousel-indicators">
             <li data-target="#slider-1" data-slide-to="0" class="active"></li>
             <li data-target="#slider-1" data-slide-to="1"></li>
             <li data-target="#slider-1" data-slide-to="2"></li>
@@ -90,7 +90,7 @@
                 <img class="img-responsive" src="images/01.jpg" alt="pic 1">
                 <div class="carousel-caption">
                     <h1>Programming</h1>
-                    <p class="lead hidden-xs">Lorem ipsum dolor sit amet, pro equidem imperdiet ad. Eum labore maluisset mnesarchum an, id erat splendide per, no mei phaedrum iracundia. Est sale propriae consetetur te, posse convenire nec. </p>
+                    <p class="lead">Lorem ipsum dolor sit amet, pro equidem imperdiet ad. Eum labore maluisset mnesarchum an, id erat splendide per, no mei phaedrum iracundia. Est sale propriae consetetur te, posse convenire nec. </p>
                 </div>
             </div>
             <div class="item ">
@@ -126,6 +126,17 @@
             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
+    </div>
+
+
+    <div class="carousel-inner" role="listbox">
+        <div class="item active visible-xs">
+            <img class="img-responsive" src="images/01.jpg" alt="pic 1">
+            <div class="carousel-caption">
+                <h1>BootCode</h1>
+                <p class="lead">Programming, Web Design, Mobile App, Hosting. </p>
+            </div>
+        </div>
     </div>
 
     <!-- End Slider Section -->
@@ -623,11 +634,11 @@
                 <div class="col-md-4">
                     <h3>Our Work</h3>
                     <div class="our-work">
-                            <img class="img-thumbnail img-responsive" src="images/work/3-room-flat-interior-design_Livingroom-150x150.jpg">
-                            <img class="img-thumbnail img-responsive" src="images/work/AB-Flat-by-Dom-Arquitectura-03.jpg">
-                            <img class="img-thumbnail img-responsive" src="images/work/Flat_B-View-02.jpg">
-                            <img class="img-thumbnail img-responsive" src="images/work/Small-flat-in-Kiev-by-YoDezeen-04.jpg">
-                        </div>
+                        <img class="img-thumbnail img-responsive" src="images/work/3-room-flat-interior-design_Livingroom-150x150.jpg">
+                        <img class="img-thumbnail img-responsive" src="images/work/AB-Flat-by-Dom-Arquitectura-03.jpg">
+                        <img class="img-thumbnail img-responsive" src="images/work/Flat_B-View-02.jpg">
+                        <img class="img-thumbnail img-responsive" src="images/work/Small-flat-in-Kiev-by-YoDezeen-04.jpg">
+                    </div>
                 </div>
             </div>
         </div>
