--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/default-theme.css" rel="stylesheet">
     <link rel="chortcut icon" href="images/icon_cloud.gif">
     <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -41,8 +42,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+
                 <a class="navbar-brand" href="#">
-                    <img class="img-responsive" src="images/icon_cloud.png" alt="Brand">
+                    <img class="img-responsive" src="images/icon_cloud_default-theme.png" alt="Brand"> 
                     <span>BootCode</span>
                 </a>
             </div>
@@ -649,6 +651,24 @@
 
     <!--  End Footer  -->
 
+    <!-- Start Option Box Section-->
+
+    <section class="option-box">
+        <div class="color-option">
+            <h4>Color Option</h4>
+            <ul class="list-unstyled">
+                <li data-value="default-theme"></li>
+                <li data-value="red-theme"></li>
+                <li data-value="orange-theme"></li>
+                <li data-value="purple-theme"></li>
+            </ul>
+        </div>
+        <i class="fa fa-gear fa-3x check-gear"></i>
+        <div class="clear-fix"></div>
+
+    </section>
+
+    <!-- Start Option Box Section-->
 
 
 
