--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </button>
 
                 <a class="navbar-brand" href="#">
-                    <img class="img-responsive" src="images/icon_cloud_default-theme.png" alt="Brand"> 
+                    <img class="img-responsive" src="images/icon_cloud_default-theme.png" alt="Brand" width="70" height="41"> 
                     <span>BootCode</span>
                 </a>
             </div>
@@ -89,21 +89,21 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img class="img-responsive" src="images/01.jpg" alt="pic 1">
+                <img class="img-responsive" src="images/01.jpg" alt="pic 1" width="74" height="74">
                 <div class="carousel-caption">
                     <h2 class="h1">Programming</h2>
                     <p class="lead">Lorem ipsum dolor sit amet, pro equidem imperdiet ad. Eum labore maluisset mnesarchum an, id erat splendide per, no mei phaedrum iracundia. Est sale propriae consetetur te, posse convenire nec. </p>
                 </div>
             </div>
             <div class="item ">
-                <img class="img-responsive" src="images/02.jpg" alt="pic 2">
+                <img class="img-responsive" src="images/02.jpg" alt="pic 2" width="74" height="74">
                 <div class="carousel-caption">
                     <h2 class="h1">Web Design</h2>
                     <p class="lead hidden-xs">ATollit diceret eos no, meis delenit no eam. Vim meis intellegebat no, justo idque postulant cum in. Adhuc dicam sit cu, ei rebum officiis deseruisse sea. Vix et sumo lobortis. </p>
                 </div>
             </div>
             <div class="item">
-                <img class="img-responsive" src="images/03.jpg" alt="pic 1">
+                <img class="img-responsive" src="images/03.jpg" alt="pic 1" width="74" height="74">
                 <div class="carousel-caption">
                     <h2 class="h1">Mobile App</h2>
                     <p class="lead hidden-xs">At brute argumentum eum, cu verterem cotidieque vis, his id eripuit inermis persecuti. Et virtute ancillae aliquando nec, vis id dictas euismod, et lorem saepe ignota sit. Pri ne menandri. </p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="item">
-                <img class="img-responsive" src="images/04.jpg" alt="pic 1">
+                <img class="img-responsive" src="images/04.jpg" alt="pic 1" width="74" height="74">
                 <div class="carousel-caption">
                     <h2 class="h1">Hosting</h2>
                     <p class="lead hidden-xs">Ea eam utamur viderer sadipscing. Vocent offendit quaerendum sed ut, per eu erat reque oratio. Solum fabulas quo ut, erant maiorum eu nam. Per maiorum docendi explicari ad. Inermis recusabo. </p>
@@ -523,22 +523,22 @@
             <div class="row">
                 <ul class="list-unstyled">
                     <li class="col-md-2 col-xs-4">
-                        <img class="img-responsive center-block" src="images/client/nvidia.png">
+                        <img class="img-responsive center-block" src="images/client/nvidia.png" width="132" height="25">
                     </li>
                     <li class="col-md-2 col-xs-4">
-                        <img class="img-responsive center-block" src="images/client/Asus.png">
+                        <img class="img-responsive center-block" src="images/client/Asus.png" width="132" height="26">
                     </li>
                     <li class="col-md-2 col-xs-4">
-                        <img class="img-responsive center-block" src="images/client/apple.png">
+                        <img class="img-responsive center-block" src="images/client/apple.png" width="132" height="30">
                     </li>
                     <li class="col-md-2 col-xs-4">
-                        <img class="img-responsive center-block" src="images/client/rsz_microsoft-logo-png.png">
+                        <img class="img-responsive center-block" src="images/client/rsz_microsoft-logo-png.png"  width="132" height="28">
                     </li>
                     <li class="col-md-2 col-xs-4">
-                        <img class="img-responsive center-block" src="images/client/Logo_OneDrive.svg.png">
+                        <img class="img-responsive center-block" src="images/client/Logo_OneDrive.svg.png" width="132" height="34">
                     </li>
                     <li class="col-md-2 col-xs-4">
-                        <img class="img-responsive center-block" src="images/client/amd.png">
+                        <img class="img-responsive center-block" src="images/client/amd.png" width="132" height="31">
                     </li>
                 </ul>
             </div>
@@ -571,22 +571,22 @@
                     <div class="social-icon">
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#"><img class=" img-responsive" src="images/social/Behance.png" alt="Behance"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Behance.png" alt="Behance" width="41" height="41"></a>
                             </li>
                             <li>
-                                <a href="#"><img class=" img-responsive" src="images/social/Facebook.png" alt="Facebook"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Facebook.png" alt="Facebook" width="41" height="41"></a>
                             </li>
                             <li>
-                                <a href="#"><img class=" img-responsive" src="images/social/Github.png" alt="Github"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Github.png" alt="Github" width="41" height="41"></a>
                             </li>
                             <li>
-                                <a href="#"><img class=" img-responsive" src="images/social/Google+.png" alt="Google"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Google+.png" alt="Google" width="41" height="41"></a>
                             </li>
                             <li>
-                                <a href="#"><img class=" img-responsive" src="images/social/Linkedin.png" alt="Linkedin"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Linkedin.png" alt="Linkedin" width="41" height="41"></a>
                             </li>
                             <li>
-                                <a href="#"><img class=" img-responsive" src="images/social/Twitter.png" alt="Twitter"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Twitter.png" alt="Twitter" width="41" height="41"></a>
                             </li>
                         </ul>
                         <div class="clear-fix"></div>
