--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img alt="image"  class="img-responsive" src="images/01.jpg" alt="pic 1">
+                <img alt="image" class="img-responsive" src="images/01.jpg" >
                 <div class="carousel-caption">
                     <h2 class="h1">Programming</h2>
                     <p class="lead">Lorem ipsum dolor sit amet, pro equidem imperdiet ad. Eum labore maluisset mnesarchum an, id erat splendide per, no mei phaedrum iracundia. Est sale propriae consetetur te, posse convenire nec. </p>
@@ -221,13 +221,13 @@
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#testimonial-carousel" data-slide-to="0" class="active">
-                            <img alt="image"  src="images/person_1.jpg" alt="Adam">
+                            <img src="images/person_1.jpg" alt="Adam">
                         </li>
                         <li data-target="#testimonial-carousel" data-slide-to="1">
-                            <img alt="image"  src="images/person_2.jpg" alt="Hany">
+                            <img src="images/person_2.jpg" alt="Hany">
                         </li>
                         <li data-target="#testimonial-carousel" data-slide-to="2">
-                            <img alt="image"  src="images/person_3.jpg" alt="Zahra">
+                            <img  src="images/person_3.jpg" alt="Zahra">
                         </li>
                     </ol>
                     <!-- Testimonial Carousel -->
@@ -571,22 +571,22 @@
                     <div class="social-icon">
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#"><img alt="image"  class=" img-responsive" src="images/social/Behance.png" alt="Behance"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Behance.png" alt="Behance"></a>
                             </li>
                             <li>
-                                <a href="#"><img alt="image"  class=" img-responsive" src="images/social/Facebook.png" alt="Facebook"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Facebook.png" alt="Facebook"></a>
                             </li>
                             <li>
-                                <a href="#"><img alt="image"  class=" img-responsive" src="images/social/Github.png" alt="Github"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Github.png" alt="Github"></a>
                             </li>
                             <li>
-                                <a href="#"><img alt="image"  class=" img-responsive" src="images/social/Google+.png" alt="Google"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Google+.png" alt="Google"></a>
                             </li>
                             <li>
-                                <a href="#"><img alt="image"  class=" img-responsive" src="images/social/Linkedin.png" alt="Linkedin"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Linkedin.png" alt="Linkedin"></a>
                             </li>
                             <li>
-                                <a href="#"><img alt="image"  class=" img-responsive" src="images/social/Twitter.png" alt="Twitter"></a>
+                                <a href="#"><img class=" img-responsive" src="images/social/Twitter.png" alt="Twitter"></a>
                             </li>
                         </ul>
                         <div class="clear-fix"></div>
