--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/default-theme.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link rel="chortcut" href="images/icon_cloud.gif">
     <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -145,7 +146,7 @@
 
     <!--  Start About Section -->
 
-    <section class="about text-center">
+    <section class="about text-center wow tada" data-wow-duration="1s" data-wow-offset="150">
         <div class="container">
             <h1>Meet Our New Template <span>BootCode</span> </h1>
             <p class="lead">Ei comprehensam vituperatoribus eum, sit no minim consequat. Ea labore latine consetetur his quod.</p>
@@ -244,7 +245,7 @@
         <div class="container">
             <h2 class="h1">Price Plan</h2>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-xs-12 wow bounceInDown" data-wow-duration="1s">
                     <div class="price_box">
                         <h3 class="text-primary">Basic</h3>
                         <p class="center-block">10$</p>
@@ -259,7 +260,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-xs-12 wow bounceInUp" data-wow-duration="1s" >
                     <div class="price_box">
                         <h3 class="text-success">Plus</h3>
                         <p class="center-block">20$</p>
@@ -274,7 +275,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-xs-12 wow bounceInDown" data-wow-duration="1s">
                     <div class="price_box">
                         <h3 class="text-warning">Prime</h3>
                         <p class="center-block">30$</p>
@@ -289,7 +290,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="col-lg-3 col-md-6 col-xs-12 wow bounceInUp" data-wow-duration="1s">
                     <div class="price_box">
                         <h3 class="text-danger">Performance</h3>
                         <p class="center-block">50$</p>
@@ -316,8 +317,8 @@
             <div class="container">
                 <h2 class="h1">Our Team</h2>
                 <div class="row">
-                    <div class="col-md-3 col col-sm-6">
-                        <div class="person">
+                    <div class="col-md-3 col col-sm-6 wow bounceIn" data-wow-duration=".5s">
+                        <div class="berson">
                             <img alt="image"  class="img-circle" src="images/person_6.jpg">
                             <h4>AbdoAllah Akram</h4>
                             <p>Lorem ipsum dolor sit amet, quod verterem maiestatis eu vix.</p>
@@ -328,7 +329,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-sm-5">
+                    <div class="col-md-3 col-sm-5 wow bounceIn" data-wow-duration=".5s">
                         <div class="person">
                             <img alt="image"  class="img-circle" src="images/person_7.jpg">
                             <h4>Nour Saad</h4>
@@ -340,7 +341,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-6 wow bounceIn" data-wow-duration=".5s">
                         <div class="person">
                             <img alt="image"  class="img-circle" src="images/person_5.jpg">
                             <h4>Saeed Khayrey</h4>
@@ -352,7 +353,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-sm-6 wow bounceIn" data-wow-duration=".5s">
                         <div class="person">
                             <img alt="image"  class="img-circle" src="images/person_8.jpg">
                             <h4>Salma Ramzy</h4>
@@ -374,7 +375,7 @@
 
     <section class="subscribe text-center">
         <div class="container">
-            <h2 class="h1">Keep In Touch</h2>
+            <h2 class="h1 wow shake" data-wow-duration="1s">Keep In Touch</h2>
             <p class=" lead">SignUp For Newsletter, Dont Warry About Spam, We Heat It Too.</p>
             <form class="form-inline">
                 <input class="form-control input-lg" type="text" placeholder="Type Your Email">
@@ -480,7 +481,7 @@
                     <!--  Start Contact Form -->
                     <div class="contact-form">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 wow bounceInLeft" data-wow-duration="1s">
                                 <form>
                                     <div class="form-group">
                                         <input class="form-control input-lg" type="text" placeholder="User Name">
@@ -496,7 +497,7 @@
                                 </form>
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-6 wow bounceInRight" data-wow-duration="1s">
                                 <form>
                                     <div class="form-group">
                                         <textarea class="form-control input-lg" placeholder="Your Message"></textarea>
@@ -672,9 +673,11 @@
 
     <!-- Start Loading Section -->
 
+<!--
     <section class="loading">
         <div class="spinner"></div>
     </section>
+-->
 
     <!-- End Loading Section -->
 
@@ -690,6 +693,8 @@
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/custom.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>new WOW().init();</script>
     <!--  JS Files  -->
 </body>
 
