--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">About</a></li>
+                    <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#">Company</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
@@ -673,9 +673,11 @@
 
     <!-- Start Loading Section -->
 
+<!--
     <section class="loading">
         <div class="spinner"></div>
     </section>
+-->
 
     <!-- End Loading Section -->
 
@@ -693,6 +695,7 @@
     <script src="js/custom.js"></script>
     <script src="js/wow.min.js"></script>
     <script>new WOW().init();</script>
+    <script src="js/jquery.nicescroll.js"></script>
     <!--  JS Files  -->
 </body>
 
