--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Company</a></li>
+                    <li><a href="fqa.html">FQA</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                         <ul class="dropdown-menu">
