--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="ceo-img">
-                        <img class="img-resposive" src="images/ceo.jpg" alt="ceo">
+                        <img class="img-resposive" src="images/ceo.png" alt="ceo">
                     </div>
                 </div>
 
