--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/default-theme.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link rel="chortcut" href="images/icon_cloud.gif">
+    <link rel="chortcut icon" href="images/icon_cloud.gif">
     <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
